--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Copy this to .env and fill in your values
 
 # Gemini API Key (from Google AI Studio)
-EXPO_PUBLIC_GEMINI_API_KEY="AIzaSyBpKGaQg0GRMXZ7AxigJr28NgasUBojIxE"
+EXPO_PUBLIC_GEMINI_API_KEY=""
 
 # Supabase (for auth and database)
 EXPO_PUBLIC_SUPABASE_URL="https://maepmkzagnkeopdekszf.supabase.co"
